Fix sidebar add station not showing

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -206,10 +206,6 @@ main {
   grid-template-rows: auto 1fr auto;
   gap: em(8px);
   padding: em(8px);
-
-  .side-bar {
-    width: 100%;
-  }
 }
 
 @include for-mobile-layout {
